syntax = "proto3";
option go_package = "github.com/sivchari/chat-answer/proto";
package api;

service RoomService {
    rpc CreateRoom (CreateRoomRequest) returns (CreateRoomResponse) {};
}

message CreateRoomRequest {
    Room room = 1;
}

message CreateRoomResponse {
    Room room = 1;
}

message Room {
    string id = 1;
    string name = 2;
}
